WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131011
[UI-side compositing] Fix animations, and add logging
https://bugs.webkit.org/show_bug.cgi?id=131011
Summary
[UI-side compositing] Fix animations, and add logging
Simon Fraser (smfr)
Reported
2014-03-31 23:21:33 PDT
[UI-side compositing] Fix animations, and add logging
Attachments
Patch
(12.78 KB, patch)
2014-03-31 23:22 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-03-31 23:22:37 PDT
Created
attachment 228244
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-03-31 23:24:07 PDT
Some sample logging: (layer 75 (name GraphicsLayer(0x7fa5a1501030) RenderBlock DIV class='box') (children 76) (position 58.00 58.00 0.00) (size width=100 height=100) (transform [0.71 0.71 0.00 0.00] [-0.71 0.71 0.00 0.00] [0.00 0.00 1.00 0.00] [100.00 200.00 0.00 1.00]) (opaque 1) (contentsScale 1.20) (animation -|transition1-_1_0_0 type=basic keyPath=transform (duration 2.00) (repeatCount 1.00) (fillMode forwards) (valueFunction none) (removedOnCompletion 0) (keyframes (keyframe 0 (timing function cubic-bezier(0.25, 0.10, 0.25, 1.00)) (value transform= [1.20 0.00 0.00 0.00] [0.00 1.20 0.00 0.00] [0.00 0.00 1.00 0.00] [0.00 0.00 0.00 1.00])) (keyframe 1 (value transform= [0.71 0.71 0.00 0.00] [-0.71 0.71 0.00 0.00] [0.00 0.00 1.00 0.00] [100.00 200.00 0.00 1.00]))) (removed animation -|transition1-_1_0_0)) (layer 42 (name GraphicsLayer(0x7fe7ce000e30) RenderBlock (relative positioned) DIV class='animating box') (position 108.00 100.00 0.00) (size width=128 height=128) (opaque 0) (backingStore width=128 height=128 scale=1.00) (animation move_1_0_0 type=keyframe keyPath=transform (duration 3.00) (repeatCount 1.00) (fillMode forwards) (valueFunction translate) (removedOnCompletion 0) (keyframes (keyframe 0 (time 0.00) (timing function linear) (value point=0.00 0.00 0.00)) (keyframe 1 (time 0.25) (timing function linear) (value point=10.00 50.00 0.00)) (keyframe 2 (time 0.75) (timing function linear) (value point=50.00 10.00 0.00)) (keyframe 3 (time 1.00) (value point=100.00 100.00 0.00))) (removed animation move_1_0_0)))
Tim Horton
Comment 3
2014-04-01 01:04:07 PDT
Comment on
attachment 228244
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=228244&action=review
> Source/WebKit2/ChangeLog:9 > + never call the superclass, so fix.
calls? called?
> Source/WebKit2/Shared/mac/RemoteLayerTreeTransaction.mm:29 > +#import <algorithm>
this is sorted wrong
Simon Fraser (smfr)
Comment 4
2014-04-01 08:30:11 PDT
http://trac.webkit.org/changeset/166588
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug