[UI-side compositing] Fix animations, and add logging https://bugs.webkit.org/show_bug.cgi?id=131011

Reviewed by Tim Horton.

UI-side animations were broken because GraphicsLayerCARemote::addAnimation()
never called the superclass, so fix.

Add logging for animations to the layer tree commit output.

* Shared/mac/RemoteLayerTreeTransaction.mm:
(WebKit::dumpProperty):
(WebKit::RemoteLayerTreeTextStream::operator<<):
(WebKit::dumpChangedLayers):
* WebProcess/WebPage/mac/GraphicsLayerCARemote.cpp:
(WebKit::GraphicsLayerCARemote::addAnimation):

Canonical link: https://commits.webkit.org/149092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166588 268f45cc-cd09-0410-ab3c-d52691b4dbfc